{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 30,
  "lineage": "d32ea147-98ec-411e-e8c9-487ea438b1e1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "metha-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:703086664750:instance/i-07230ab180d5b2331",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07230ab180d5b2331",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test-server-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b313a8f95eff4c54",
            "private_dns": "ip-10-10-0-186.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.186",
            "public_ip": "18.205.116.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0408d9e45d1265d40",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f4385be8b16cb3e2",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-080f0d91095826dad"
            ]
          },
          "dependencies": [
            "aws_security_group.metha-aws_security_group",
            "aws_subnet.metha-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "metha-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703086664750:internet-gateway/igw-011f1742fc31a89c9",
            "id": "igw-011f1742fc31a89c9",
            "owner_id": "703086664750",
            "tags": {
              "Name": "metha-gateway"
            },
            "tags_all": {
              "Name": "metha-gateway"
            },
            "vpc_id": "vpc-06475e1ab9172a507"
          },
          "dependencies": [
            "aws_vpc.metha-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "metha-route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703086664750:route-table/rtb-0e0cb2aef38e02434",
            "id": "rtb-0e0cb2aef38e02434",
            "owner_id": "703086664750",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-011f1742fc31a89c9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "metha-route_table"
            },
            "tags_all": {
              "Name": "metha-route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06475e1ab9172a507"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.metha-gateway",
            "aws_vpc.metha-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "metha-aws_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04cbd3417d72f8c6a",
            "route_table_id": "rtb-0e0cb2aef38e02434",
            "subnet_id": "subnet-0f4385be8b16cb3e2"
          },
          "dependencies": [
            "aws_internet_gateway.metha-gateway",
            "aws_route_table.metha-route_table",
            "aws_subnet.metha-subnet",
            "aws_vpc.metha-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "metha-aws_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703086664750:security-group/sg-080f0d91095826dad",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080f0d91095826dad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "metha-aws_security_group",
            "name_prefix": "",
            "owner_id": "703086664750",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "metha-aws_security_group"
            },
            "tags_all": {
              "Name": "metha-aws_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-06475e1ab9172a507"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.metha-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "metha-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703086664750:subnet/subnet-0f4385be8b16cb3e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4385be8b16cb3e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "703086664750",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "metha-subnet"
            },
            "tags_all": {
              "Name": "metha-subnet"
            },
            "vpc_id": "vpc-06475e1ab9172a507"
          },
          "dependencies": [
            "aws_vpc.metha-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "metha-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703086664750:vpc/vpc-06475e1ab9172a507",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-09ed13351eb6228c8",
            "default_route_table_id": "rtb-0f8770e2784854d2e",
            "default_security_group_id": "sg-02f78eaf637fff0d7",
            "dhcp_options_id": "dopt-0cdb4d6032365f278",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06475e1ab9172a507",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f8770e2784854d2e",
            "owner_id": "703086664750"
          }
        }
      ]
    }
  ]
}